backend/library-service/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: library-service
spec:
  selector:
    app: library-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: ClusterIP
